--- a/default.html
+++ b/default.html
@@ -16,62 +16,80 @@
             <a href="default.html" style="color: black;" >Aliens</a>
         </h1>
         <h2 style="color: blue;">Are you an alien</h2>
-        </div>
-        <div class="navbar">
-            <nav class="navbar navbar-expand-lg navbar-light ">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="default.html">Home</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link" href="default.html">Other</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="default.html">Other</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="default.html">Other</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="default.html">Other</a>
-                      </li>
-                    </ul>
-                  </div>
+        <div class="row">
+          <div class="col-md-12">
+            <nav class="navbar navbar-expand-lg navbar-light bg-green">
+              <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="default.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="default.html">Other</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="default.html">Other</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="default.html">Other</a>
+                    </li>
+                  </ul>
                 </div>
-              </nav>
+              </div>
+            </nav>
+          </div>
+        </div>
         </div>
     </header>
-    <main class="main row">
-        <div class="main-left col-md-6">
-            <h3>Answer the following questions to determine if someone is an:</h3>
-            <p>Do you talk to Animals:</p>
-            <select class="form-select" aria-label="Default select example">
-                <option selected> only when they are delevering profound messages</option>
-                <option value="1"> only to do tricks</option>
-                <option value="2"> of course, who doesn’t</option>
-                <option value="3"> only to deliver profound messages</option>
+    <main class="default">
+      <div class="container">
+        <div class="default-container">
+          <div class="default-quiz">
+            <h2 class="default-heading">
+              Answer the following questions to determine if someone is an:
+            </h2>
+            <div class="default-question">
+              <h5>Do you talk to Animals:</h5>
+              <select class="defaultAns">
+                <option selected>
+                  only when they are delevering profound messages
+                </option>
+                <option> only to do tricks</option>
+                <option> of course, who doesn’t</option>
+                <option> only to deliver profound messages</option>
               </select>
-            <p>Do you eat?</p>
-            <select class="form-select" aria-label="Default select example">
-                <option selected>no, why would you I do that?</option>
-                <option value="1">of course, who doesn’t</option>
-              </select>
-            <p>How do you feel about the movie wall-e</p>
-            <select class="form-select" aria-label="Default select example">
-                <option selected>he's my brother</option>
-                <option value="1">i don't know</option>
-              </select>
-            <button id="btnDetermine">Determine</button>
-        </div>
-        <div class="main-right col-md-6">
-            <h3>Result</h3>
-            <div id="imgContainer">
-                <img src="#" alt="" id="imgItem">
             </div>
+            <div class="default-question">
+              <h5>Do you eat:</h5>
+              <select class="defaultAns">
+                <option selected>no, why would I do that?</option>
+                <option> only to do tricks</option>
+                <option> of course, who doesn’t</option>
+                <option> only to deliver profound messages</option>
+              </select>
+            </div>
+            <div class="default-question">
+              <h5>How do you feel about the movie wall-e</h5>
+              <select class="defaultAns">
+                <option selected>he's my brother</option>
+                <option> only to do tricks</option>
+                <option> of course, who doesn’t</option>
+                <option> only to deliver profound messages</option>
+              </select>
+            </div>
+            <button id="determine">Determine</button>
+          </div>
+
+          <div class="default-result">
+            <h2 class="default-heading">Result</h2>
+            <div class="default-box"></div>
+          </div>
         </div>
+      </div>
     </main>
     <script src="js/myscript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
